syntax = "proto3";

option csharp_namespace = "GrpcCacheClient";

package cache;

service CacheService {
    rpc GetAll (GetAllRequest) returns (GetAllResponse);
    rpc GetData (GetDataRequest) returns (GetDataResponse);
    rpc SetData (SetDataRequest) returns (SetDataResponse);
    rpc SetDataBatch (SetDataBatchRequest) returns (SetDataBatchResponse);
    rpc RemoveData (RemoveDataRequest) returns (RemoveDataResponse);
    rpc RemoveHash (RemoveHashRequest) returns (RemoveHashResponse);
    rpc GetHashKeys (GetHashKeysRequest) returns (GetHashKeysResponse);
    rpc SetAdd (SetAddRequest) returns (SetAddResponse);
    rpc GetSetMembers (GetSetMembersRequest) returns (GetSetMembersResponse);
    rpc CreateIndex (CreateIndexRequest) returns (CreateIndexResponse);
    rpc AddDocument (AddDocumentRequest) returns (AddDocumentResponse);
    rpc Search (SearchRequest) returns (SearchResponse);
    rpc IndexExists (IndexExistsRequest) returns (IndexExistsResponse);
}

message GetAllRequest {
    string hashKey = 1;
}

message GetAllResponse {
    repeated KeyValuePair entries = 1;
}

message GetDataRequest {
    string key = 1;
    string id = 2;
}

message GetDataResponse {
    string data = 1;
}

message SetDataRequest {
    string key = 1;
    string id = 2;
    string data = 3;
}

message SetDataResponse {
    bool success = 1;
}

message SetDataBatchRequest {
    string key = 1;
    repeated KeyValuePair entries = 2;
}

message KeyValuePair {
    string id = 1;
    string data = 2;
}

message SetDataBatchResponse {
    bool success = 1;
}

message RemoveDataRequest {
    string key = 1;
    string id = 2;
}

message RemoveDataResponse {
    bool success = 1;
}

message RemoveHashRequest {
    string key = 1;
}

message RemoveHashResponse {
    bool success = 1;
}

message GetHashKeysRequest {
    string key = 1;
}

message GetHashKeysResponse {
    repeated string keys = 1;
}

message SetAddRequest {
    string indexKey = 1;
    string productKey = 2;
}

message SetAddResponse {
    bool success = 1;
}

message GetSetMembersRequest {
    string setKey = 1;
}

message GetSetMembersResponse {
    repeated string members = 1;
}

message CreateIndexRequest {
    string indexName = 1;
    repeated Property properties = 2;
}

message CreateIndexResponse {
    string message = 1;
}

message AddDocumentRequest {
    string indexName = 1;
    string id = 2;
    repeated Property properties = 3;
}

message AddDocumentResponse {
    string message = 1;
}

message Property {
    string name = 1;
    string value = 2;
}

message SearchRequest {
    string indexName = 1;
    string query = 2;
    int32 limit = 3;
}

message SearchResponse {
    repeated SearchDocument documents = 1;
}

message SearchDocument {
    string id = 1;
    map<string, string> fields = 2;
}

message IndexExistsRequest {
    string index_name = 1;
}

message IndexExistsResponse {
    bool exists = 1;
}